clusters/talos-ottawa/apps/tailvoy/app/authz-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tailvoy-authz
  namespace: envoy-gateway-system
spec:
  selector:
    gateway.envoyproxy.io/owning-gateway-name: tailvoy
    gateway.envoyproxy.io/owning-gateway-namespace: tailvoy
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: authz
