clusters/talos-ottawa/apps/tailvoy/app/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  namespace: tailvoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:plain-text
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: tailvoy
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
