clusters/talos-ottawa/apps/tailvoy/app/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tailvoy-authz
  namespace: tailvoy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: nginx-hello
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: tailvoy-authz
          namespace: envoy-gateway-system
          port: 9001
    contextExtensions:
      - name: listener
        type: Value
        value: "tailvoy/tailvoy/http"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: tailvoy-authz-grant
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: tailvoy
  to:
    - group: ""
      kind: Service
      name: tailvoy-authz
