clusters/talos-ottawa/apps/tailvoy/app/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: nginx-tcp
  namespace: tailvoy
spec:
  parentRefs:
    - name: tailvoy
      sectionName: tcp
  rules:
    - backendRefs:
        - name: nginx-hello
          port: 8080
